# spot

./: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  numerical-experiments.html  pyproject.toml  robots.txt  rydberg-atoms.html  satellite-mission-planning.html  sitemap.xml  solvers.html
.github/workflows/: vuepress-deploy.yml
assets/: 404.html-ZcLzdwq7.js  app-DmkRxdF9.js  index.html-COM6oREI.js  numerical-experiments.html-DausjEEX.js  rydberg-atoms.html-lglJsLFN.js  satellite-mission-planning.html-CNOlqVsB.js  solvers.html-DgxmOmFY.js  style-Nsq74zty.css
docs/: deploy.sh  package.json  thirdparty-notice.md
docs/src/: README.md  README_flags.md  dashboard.md  numerical-experiments.md  rydberg-atoms.md  satellite-mission-planning.md  solvers.md  state-of-the-art.md
docs/src/.vuepress/: config.ts  navbar.ts  sidebar.ts  theme.ts
examples/visit_cities/: README.md  compute_dtos.py  sample_requests.py  solver_networkx.py
spot/metrics/: completion_rate.py  dashboard.py  image_quality.py  maneuver_duration.py  metric.py  overlap_complexity.py  time_to_solution.py  workload_balance.py
spot/mis/: networkx.py  postprocessing.py  solver.py
spot/mis/rydberg/: cloud.py  plot.py  pulse.py  qubo.py  solver.py
spot/mis/rydberg/embeddings/: autoencoder.py  unit_disk.py
spot/rl/environments/: render.py  satellite.py  utils.py
