[project]
name = "spot"
version = "1.0.0"
dependencies = [
    "numpy",
    "matplotlib",
    "plotly",
    "gymnasium",
    "pulser",
    "ephem",
    "keras",
    "tensorflow",
    "maximum-independent-set",
    "scikit-learn",
    "pandas",
    "dash",
    "dash-bootstrap-components",
    "flask-cors"
]
requires-python = ">=3.10"

authors = [
  {name = "Michel Nowak", email = "michel.nowak@thalesgroup.com"},
]

description = "Satellite Mission Planning with Rydberg Atoms"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["spot/*"]
